codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__model_selection_popup.snap
---
source: tui/src/chatwidget/tests.rs
assertion_line: 2047
expression: popup
---
  Select Model and Effort
  Access legacy models by running codex -m <model_name> or in your config.toml

› 1. gpt-5.2-codex (default)     Latest frontier agentic coding model.
  2. gpt-5.1-codex-max           Codex-optimized flagship for deep and fast
                                 reasoning.
  3. gpt-5.1-codex-mini          Optimized for codex. Cheaper, faster, but
                                 less capable.
  4. gpt-5.2                     Latest frontier model with improvements
                                 across knowledge, reasoning and coding
  5. gemini-3-pro-preview-codex  Gemini 3 Pro preview (via Gemini wire API).
  6. gemini-3-flash-preview      Gemini 3 Flash preview (via Gemini wire API).
  7. gemini-3-pro-image-preview  Gemini 3 Pro image preview (multimodal).

  Press enter to select reasoning effort, or esc to dismiss.
